--- a/BombasticBookstore/bombasticbookstore/static/styles/general.css
+++ b/BombasticBookstore/bombasticbookstore/static/styles/general.css
@@ -5,8 +5,10 @@ main {
   justify-content: center;
   align-items: center;
   position: fixed;
+  margin-top: 100px;
   top: 50%;
   left: 50%;
+  height:100px;
   width: 1000px;
   transform: translate(-50%, -50%);
   background-color: rgba(11,11,11,1);
