--- a/BombasticBookstore/bombasticbookstore/templates/registration/login.html
+++ b/BombasticBookstore/bombasticbookstore/templates/registration/login.html
@@ -126,17 +126,10 @@
 	</div> <!-- Login -->
 	<div class="sign-up">
 		<span class="toggle-switch opt2">
-			<h2>Sign Up</h2>
-			<form action="signup.php" method="post">
-				<label for="name">Name:</label>
-				<input type="text" id="name" name="name"><br><br>
-				<label for="email">Email:</label>
-				<input type="email" id="email" name="email"><br><br>
-				<label for="userID">Enter User ID:</label>
-				<input type="text" id="userID" name="userID"><br><br>
-				<label for="signup-password">Create Password(at least 8 characters):</label>
-				<input type="password" id="signup-password" name="password"><br><br>
-				<input type="submit" value="Sign Up">
+			<!-- <form method="post">
+				{% csrf_token %}
+				{{ form.as_p }}
+				<input type="submit" value="Sign Up">  
 			</form><br>
 			{% if form.errors %}
 				<ul>
@@ -146,14 +139,14 @@
 						{% endfor %}
 					{% endfor %}
 				</ul>
-			{% endif %}
+			{% endif %} -->
 		</span>
-    </div> <!-- Sign up -->
+    </div> <!-- Sign Up -->
 	<p style="display:flex; justify-content: center;">OR</p>
 	<div style="display:flex; justify-content:center; padding: 25px;">
 		<input class="toggle-checkbox" type="checkbox" id="toggle">
 		<label class="slider" for="toggle">
-			<span class="toggle-switch opt1 toggle-label">New User? Sign Up</span>
+			<span class="toggle-switch opt1 toggle-label"> <a href="{% url 'signup' %}">New User? Sign Up</a></span>
 			<span class="toggle-switch opt2 toggle-label">Login</span>
 		</label>
 	</div>
