--- a/BombasticBookstore/bombasticbookstore/templates/registration/signup.html
+++ b/BombasticBookstore/bombasticbookstore/templates/registration/signup.html
@@ -1,11 +1,74 @@
+<style>
+    * {
+    color: white;
+    }
+    body {background-color: rgba(10,10,10,1); font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif}
+    main {
+     padding: 100px;
+     justify-content: center;
+     position: fixed;
+     top: 50%;
+     left: 50%;
+     width: 500px;
+     transform: translate(-50%, -50%);
+     background-color: rgba(11,11,11,1);
+     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+     border-radius: 25px;
+    }
+    .flex-parent {
+        display: inline;
+    }
+    .flex-child {
+        flex: 1;
+        justify-content: center;
+    }
+    .card {
+      /* Add shadows to create the "card" effect */
+      padding: 25px;
+      display: inline;
+      justify-content: center;
+      flex-wrap: wrap;
+      box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+      transition: 0.3s;
+      background-color: rgba(0,0,0,0.2);
+      border-radius: 25px;
+    }
+    
+    /* toggle styling starts here */
+    /* hide the "default" checkbox/appearance */
+    .toggle-checkbox {
+      display: none;
+    }
+    .toggle-label {
+        padding: 5px;
+        background-color: grey;
+        color: white;
+        outline-width: 1px;
+        outline-color: white;
+        border-radius: 5px;
+    }
+    /* Content Toggle */
+    .toggle-label:hover {
+        background-color: #F2F2F2;
+        color: white;
+    }
+    .toggle-switch.opt1 {
+        display: inline;
+    }
+    .toggle-switch.opt2 {
+      display: none;
+    }
+    .toggle-checkbox:checked ~ .slider > .toggle-switch.opt1 {
+      display: none;
+    }
+    .toggle-checkbox:checked ~ .slider > .toggle-switch.opt2 {
+      display: inline;
+    }
+</style>
 
-{% block title %}Sign Up{% endblock title %}
-
-{% block content %}
-<h2>Sign Up</h2>
+<h1>Sign Up</h1>
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button class="btn btn-success" type="submit">Sign Up</button>
 </form>
-{% endblock content %}
